# model-first-order

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  diesel.toml  justfile  model-first-pipeline-example.md  openapi.json
.claude/: MULTI_AGENT.md
.claude/agents/: diataxis-docs-generator.md  migration-writer.md  pre-merge-validator.md  task-planner.md  test-completeness-checker.md
.claude/rules/: commit-conventions.md  parallel-safety.md  pipeline-order.md  quality-checks.md  worktree-conventions.md
.claude/skills/malky-docs-generator/: SKILL.md
.github/workflows/: ci.yml
docs/: schema-evolution.md
infra/: docker-compose.yml
infra/debezium/: Dockerfile  register-connector.json
migrations/20250201000001_create_orders_and_line_items/: down.sql  up.sql
migrations/20260301000001_create_commerce_order_outbox/: down.sql  up.sql
migrations/20260301000002_add_outbox_sequence_number/: down.sql  up.sql
schemas/: order-aggregate.avsc
scripts/: register-schemas.sh  run_e2e_tests.sh
src/: db.rs  errors.rs  lib.rs  main.rs  openapi.rs  routes.rs  schema.rs  serializers.rs
src/handlers/: health.rs  orders.rs
src/models/: mod.rs  order.rs  order_line_item.rs  order_status.rs  outbox.rs
tests/: e2e_test.rs  metrics.rs  openapi_freshness.rs  order_lifecycle.rs  schema_validation_test.rs
