[package]
name = "order-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "order-api"
path = "src/main.rs"

[[bin]]
name = "export-openapi"
path = "src/bin/export_openapi.rs"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
actix-web-prom = "0.9"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid", "numeric", "serde_json"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel_migrations = "2.2"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
actix-web-prom = "0.9"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
testcontainers = "0.27"
rdkafka = { version = "0.36", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
apache-avro = "0.16"
